Trennung Adresse Telefon
Die Adresse und die Telefonnummer wurden nicht getrennt.

--- a/www/html/shopping/metzger.html
+++ b/www/html/shopping/metzger.html
@@ -98,7 +98,7 @@
 			<div class="shopping_baeck_cont_next">
 				<div class="shopping_baeck_anschrift">
 					Hauptstra&szlig;e 22<br>
-					89522 Heidenheim
+					89522 Heidenheim<br>
 					Telefon: (07321) 92 43 83
 				</div>
 				<div class="shopping_baeck_tage">
@@ -113,7 +113,7 @@
 			<div class="shopping_baeck_cont_next">
 				<div class="shopping_baeck_anschrift">
 					Griegerstra&szlig;e 1<br>
-					89518 Heidenheim
+					89518 Heidenheim<br>
 					Telefon: (07321) 404 56
 				</div>
 				<div class="shopping_baeck_tage">
