--- a/www/html/shopping/supermaerkte.html
+++ b/www/html/shopping/supermaerkte.html
@@ -258,6 +258,55 @@
 			</div>
 		</div>
 	</div>
+	<div class="shopping_baeck_location">
+		<div class="shopping_baeck_img">
+			<a href="http://www.norma-online.de/">
+			<img class="shopping_baeck_img_locations" src="../../images/norma.jpg" alt="NormaLogo"></a>
+		</div>
+		<div class="shopping_baeck_cont_main">
+			<div class="shopping_baeck_cont_top">
+				<div class="shopping_baeck_anschrift">
+					Wilhelmstra&szlig;e 82<br>
+					89518 Heidenheim
+				</div>
+				<div class="shopping_baeck_tage">
+					Montag - Samstag:
+				</div>
+				<div class="shopping_baeck_zeiten">
+					08:00 - 20:00
+				</div>
+			</div>
+			<div class="shopping_baeck_cont_next">
+				<div class="shopping_baeck_anschrift">
+					Am Wedelgraben 36<br>
+					89522  Heidenheim
+				</div>	
+				<div class="shopping_baeck_tage">
+					Montag - Samstag:
+				</div>			
+				<div class="shopping_baeck_zeiten">
+					08:00 - 20:00
+				</div>
+			</div>
+			<div class="shopping_baeck_cont_next">
+				<div class="shopping_baeck_anschrift">
+					Aalener Stra&szlig;e 4
+					89520  Heidenheim an Der Brenz
+				</div>
+				<div class="shopping_baeck_tage">
+					Montag  - Samstag:
+				</div>
+				<div class="shopping_baeck_zeiten">
+					08:00 - 20:00
+				</div>
+			</div>
+			<div class="shopping_baeck_cont_next">
+				<div class="shopping_baeck_anschrift">
+					<a href="http://norma-online.de/_d_/_angebote_/">Aktuelle Angebote von Norma</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="shopping_content">
 	</div>
     	<p id="shopping_lieblingssuperm">Solltet Ihr euren Lieblingssupermarkt hier vermissen kontaktiert uns bitte &uuml;ber unser <a href="../kontakt.html">Kontaktformular</a>.</p>
