--- a/www/html/shopping/supermaerkte.html
+++ b/www/html/shopping/supermaerkte.html
@@ -226,7 +226,6 @@
 					07:00 - 21:00
 				</div>
 			</div>
-
 			<div class="shopping_baeck_cont_next">
 				<div class="shopping_baeck_anschrift">
 					K&ouml;nigsbronner Stra&szlig;e 28<br>
@@ -254,6 +253,43 @@
 			<div class="shopping_baeck_cont_next">
 				<div class="shopping_baeck_anschrift">
 					<a href="https://www.netto-online.de/Filial-Angebote.chtm">Aktuelle Angebote von Netto in Heidenheim</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="shopping_baeck_location">
+		<div class="shopping_baeck_img">
+			<a href="http://www.lidl.de/">
+			<img class="shopping_baeck_img_locations" src="../../images/lidl.jpg" alt="LidlLogo"></a>
+		</div>
+		<div class="shopping_baeck_cont_main">
+			<div class="shopping_baeck_cont_next">
+				<div class="shopping_baeck_anschrift">
+						Am S&auml;gewerk 7<br>
+						89518 Heidenheim
+				</div>	
+				<div class="shopping_baeck_tage">
+					Montag - Samstag:
+				</div>			
+				<div class="shopping_baeck_zeiten">
+					08:00 - 21:00
+				</div>
+			</div>
+			<div class="shopping_baeck_cont_next">
+				<div class="shopping_baeck_anschrift">
+					In den Seewiesen 66<br>
+					89520 Heidenheim
+				</div>
+				<div class="shopping_baeck_tage">
+					Montag  - Samstag:
+				</div>
+				<div class="shopping_baeck_zeiten">
+					08:00 - 21:00
+				</div>
+			</div>
+			<div class="shopping_baeck_cont_next">
+				<div class="shopping_baeck_anschrift">
+					<a href="http://www.lidl.de/de/aktuelle-angebote/c5516">Aktuelle Angebote von Lidl in Heidenheim</a>
 				</div>
 			</div>
 		</div>
